<resources>
    <string name="app_name">Paylot Android</string>
    <string name="paylot_default_merchant_name">Paylot Store</string>
    <string name="paylot_default_tx_rate">100,000 NGN = 0.00456 BCH</string>
    <string name="paylot_brand_text">Powered by Paylot</string>
    <string name="paylot_get_address">Get Payment Address</string>
    <string name="paylot_default_conversion">0.0005 BTC</string>
    <string name="paylot_default_currency">Bitcoin</string>
    <string name="paylot_currency_logo_desc">Currency logo</string>
    <string name="paylot_default_timer">5m: 0s remaining</string>
    <string name="paylot_select_option">Select payment option</string>
    <string name="paylot_amount_due">Amount Due:  </string>
    <string name="paylot_qr_desc">Scan the QR code below to reveal payment address, or tap to copy the given address and amount.</string>

    <string name="paylot_retry">Retry</string>
    <string name="paylot_wait">Wait</string>
    <string name="paylot_payment_fail">Payment not successful</string>
    <string name="paylot_payment_success">Payment completed</string>
</resources>
