<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paylot_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/payLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/paylot_white"
            android:orientation="vertical"
            tools:context="co.paylot.android.PayActivity">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/paylot_header_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/merchant_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/paylot_white"
                    android:padding="3dp"
                    android:src="@drawable/paylot_demo_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/merchant_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.85"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/paylot_default_merchant_name"
                        android:textColor="@color/paylot_lightGrey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tx_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/paylot_default_tx_rate"
                        android:textColor="@color/paylot_white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/timer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/paylot_blue"
                android:paddingBottom="5dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:text="@string/paylot_default_timer"
                android:textColor="@color/paylot_white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/paylot_select_option"
                android:textSize="18sp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/processorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/paylot_green"
                android:onClick="getPaymentAddress"
                android:text="@string/paylot_get_address"
                android:textColor="@color/paylot_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/paylot_brand_text"
                android:textColor="@color/paylot_black"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>


